add_library(lapack
dgbtf2.f
dgbtrf.f
dgbtrs.f
dgebak.f
dgebal.f
dgeev.f
dgehd2.f
dgehrd.f
dgeqr2.f
dgetf2.f
dgetrf.f
dgetri.f
dgttrf.f
dgttrs.f
dhseqr.f
dlabad.f
dlacon.f
dlacpy.f
dladiv.f
dlae2.f
dlaev2.f
dlaexc.f
dlagtm.f
dlahqr.f
dlahr2.f
dlahrd.f
dlaln2.f
dlamch.f
dlange.f
dlanhs.f
dlansp.f
dlanst.f
dlansy.f
dlanv2.f
dlaptm.f
dlapy2.f
dlapy3.f
dlaqr0.f
dlaqr1.f
dlaqr2.f
dlaqr3.f
dlaqr4.f
dlaqr5.f
dlaran.f
dlarfb.f
dlarf.f
dlarfg.f
dlarft.f
dlarfx.f
dlarnd.f
dlarnv.f
dlartg.f
dlaruv.f
dlascl.f
dlaset.f
dlasr.f
dlasrt.f
dlassq.f
dlaswp.f
dlasy2.f
dlatrd.f
dopgtr.f
dorg2l.f
dorg2r.f
dorghr.f
dorgql.f
dorgqr.f
dorgtr.f
dorm2r.f
dpttrf.f
dpttrs.f
dspev.f
dsptrd.f
dsteqr.f
dsterf.f
dstev.f
dsyev.f
dsytd2.f
dsytrd.f
dtrevc.f
dtrexc.f
dtrsen.f
dtrsyl.f
dtrti2.f
dtrtri.f
ieeeck.f
ilaenv.f
iparmq.f
lsame.f
lsamen.f
xerbla.f
xlaenv.f
)
